--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".SkipActivity" />
         <activity android:name=".LocationActivity" />
+        <activity android:name=".MyCardActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".MyCardActivity"></activity>
+        <activity android:name=".SignupActivity"></activity>
     </application>
 
 </manifest>
