--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Splash"
+            android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,10 +22,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SkipActivity" />
-        <activity android:name=".LocationActivity" />
-        <activity android:name=".LoginActivity" />
+            android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".SkipActivity" ></activity>
+        <activity android:name=".LocationActivity" ></activity>
         <activity android:name=".MyCardActivity"></activity>
     </application>
 
