--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.kishan.grofers">
+    package="com.app.jpr.market">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Splash"
+            android:name="com.app.jpr.market.Splash"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -23,15 +23,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.app.jpr.market.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SkipActivity" />
-        <activity android:name=".LocationActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MyCardActivity"></activity>
-        <activity android:name=".SignupActivity" />
-        <activity android:name=".Main2Activity"></activity>
+        <activity android:name="com.app.jpr.market.SkipActivity" />
+        <activity android:name="com.app.jpr.market.LocationActivity" />
+        <activity android:name="com.app.jpr.market.LoginActivity" />
+        <activity android:name="com.app.jpr.market.MyCardActivity"></activity>
+        <activity android:name="com.app.jpr.market.SignupActivity" />
+        <activity android:name="com.app.jpr.market.Main2Activity"></activity>
     </application>
 
 </manifest>
