--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".CatagoryActivity" />
         <activity
             android:name=".Splash"
             android:label="@string/app_name"
@@ -29,8 +31,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".SkipActivity" />
         <activity android:name=".LocationActivity" />
-        <activity android:name=".NearbyLocationActivity" android:theme="@style/AppTheme4"/>
-
+        <activity
+            android:name=".NearbyLocationActivity"
+            android:theme="@style/AppTheme4" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MyCardActivity" />
         <activity android:name=".SignupActivity" />
