--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< Updated upstream
-        <activity android:name=".SearchActivity"></activity>
-        <activity android:name=".CatagoryActivity" />
-=======
-        <activity android:name=".categorie"></activity>
->>>>>>> Stashed changes
+        <activity android:name=".Activities.categorie" />
         <activity
-            android:name=".Splash"
+            android:name=".Activities.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -30,17 +25,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SkipActivity" />
-        <activity android:name=".LocationActivity" />
+        <activity android:name=".Activities.SkipActivity" />
+        <activity android:name=".Activities.LocationActivity" />
         <activity
-            android:name=".NearbyLocationActivity"
+            android:name=".Activities.NearbyLocationActivity"
             android:theme="@style/AppTheme4" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MyCardActivity" />
-        <activity android:name=".SignupActivity" />
+        <activity android:name=".Activities.LoginActivity" />
+        <activity android:name=".Activities.MyCardActivity" />
+        <activity android:name=".Activities.SignupActivity" />
     </application>
 
 </manifest>
