--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,14 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            testCoverageEnabled = true
             buildConfigField "String", "API_SERVER_IP", "\"http://192.168.1.11/\""
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
         debug {
             minifyEnabled false
+            testCoverageEnabled = true
             buildConfigField "String", "API_SERVER_IP", "\"http://192.168.1.11/\""
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
