--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,53 +6,65 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-                 android:allowBackup="true"
-                 android:icon="@mipmap/ic_launcher"
-                 android:label="@string/app_name"
-                 android:roundIcon="@mipmap/ic_launcher_round"
-                 android:supportsRtl="true"
-                 android:theme="@style/AppTheme">
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
-                 android:name=".Activities.SplashActivity"
-                 android:label="@string/app_name"
-                 android:screenOrientation="portrait"
-                 android:theme="@style/AppTheme.NoActionBar">
+            android:name=".Activities.SplashActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                  android:name=".Activities.MainActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Activities.SkipActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".Activities.LocationActivity"
-                  android:screenOrientation="portrait" />
+            android:name=".Activities.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                  android:name=".Activities.NearbyLocationActivity"
-                  android:theme="@style/AppTheme4"
-                  android:screenOrientation="portrait" />
+            android:name=".Activities.SkipActivity"
+            android:screenOrientation="portrait" />
         <activity
-                  android:name=".Activities.SearchActivity"
-                  android:theme="@style/AppTheme5"
-                  android:screenOrientation="portrait"/>
+            android:name=".Activities.LocationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.NearbyLocationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme4" />
+        <activity
+            android:name=".Activities.SearchActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme5" />
+        <activity
+            android:name=".Activities.CategoryActivity"
+            android:label="@string/app_name2"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.app_bar_main"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.MyCardActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.SignupActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".Activities.ProductActivity"
+            android:screenOrientation="portrait" />
 
 
-        <activity android:name=".Activities.CategoryActivity"
-                  android:label="@string/app_name2"
-                  android:screenOrientation="portrait" />
-        <activity android:name=".Activities.app_bar_main"
-                  android:screenOrientation="portrait" />
-        <activity android:name=".Activities.LoginActivity"
-                  android:screenOrientation="portrait" />
-        <activity android:name=".Activities.MyCardActivity"
-                  android:screenOrientation="portrait" />
-        <activity android:name=".Activities.SignupActivity"
-                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
