--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 
     implementation 'me.relex:circleindicator:1.2.2@aar'
 
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
