--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activities.InfoActivity"></activity>
         <activity
             android:name=".Activities.SplashActivity"
             android:label="@string/app_name"
@@ -59,12 +60,9 @@
         <activity
             android:name=".Activities.SignupActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".Activities.ProductActivity"
             android:screenOrientation="portrait" />
-
-
     </application>
 
 </manifest>
