--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
         <activity
             android:name=".Activities.SignupActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.ProductActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
