--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.About_us"></activity>
+        <activity android:name=".Activities.SeeAllActivity"></activity>
+        <activity android:name=".Activities.About_us" />
         <activity
             android:name=".Activities.SplashActivity"
             android:label="@string/app_name"
@@ -21,6 +22,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
