--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,12 @@ dependencies {
 
     implementation 'com.android.support:design:28.0.0'
 
+
+    implementation 'com.squareup.picasso:picasso:2.5.0'
+    implementation group:'com.squareup.picasso', name:'picasso', version:'2.5.0'
+
+
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
