--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.SeeAllActivity"></activity>
+        <activity android:name=".Activities.PriceActivity"
+            android:theme="@style/AppTheme6"
+            ></activity>
+        <activity android:name=".Activities.SeeAllActivity" />
         <activity android:name=".Activities.About_us" />
         <activity
             android:name=".Activities.SplashActivity"
