--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
     implementation 'me.relex:circleindicator:1.2.2@aar'
 
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 
     implementation 'com.android.support:design:28.0.0'
