--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activities.PriceActivity"
-            android:theme="@style/AppTheme6"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Activities.AskedQuestionActivity"></activity>
+        <activity
+            android:name=".Activities.PriceActivity"
+            android:theme="@style/AppTheme6" />
         <activity android:name=".Activities.SeeAllActivity" />
         <activity android:name=".Activities.About_us" />
         <activity
