hit best selling seeall api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activities.AskedQuestionActivity"></activity>
+        <activity android:name=".Activities.SeeAllTopSaversActivity"></activity>
+        <activity android:name=".Activities.SeeAllBlockBusterActivity" />
+        <activity android:name=".Activities.AskedQuestionActivity" />
         <activity
             android:name=".Activities.PriceActivity"
             android:theme="@style/AppTheme6" />
